pushing the map demo